# wxBorderlessFrame

./: .gitignore  CMakeLists.txt  Doxyfile  FindPkgConfig.cmake  README.md  vcpkg.json  wxBorderlessFrame.sln  wxBorderlessFrame.vcxproj  wxBorderlessFrame.vcxproj.filters
doc/md/: mainpage.md  test.md
example/: example.vcxproj  example.vcxproj.filters  main.cpp  main.rc
include/wxbf/: borderless_frame.h  borderless_frame_base.h  borderless_frame_common.h  borderless_frame_gtk.h  borderless_frame_msw.h  drop_shadow_frame.h  drop_shadow_frame_base.h  drop_shadow_frame_gtk.h  drop_shadow_frame_msw.h  resizer_drop_shadow_frame.h  system_buttons.h  system_buttons_base.h  system_buttons_fallback.h  system_buttons_win10.h  window_gripper.h  window_gripper_gtk.h  window_gripper_msw.h
src/: borderless_frame_base.cpp  borderless_frame_gtk.cpp  borderless_frame_msw.cpp  drop_shadow_frame_base.cpp  drop_shadow_frame_gtk.cpp  drop_shadow_frame_msw.cpp  system_buttons.cpp  system_buttons_base.cpp  system_buttons_fallback.cpp  system_buttons_win10.cpp  system_menu_png.cpp  system_menu_png.h  window_gripper.cpp  window_gripper_gtk.cpp  window_gripper_msw.cpp
